<resources>
    <string name="app_name">Pomodoro App</string>
    <string name="pomodoro_timer">Pomodoro Timer:</string>
    <string name="edit_timer">Choose your Pomodoro Timer:</string>
    <string name="task_name">Task name</string>
    <string name="edit_task">Write your task</string>
    <string name="ringtone">Ringtone:</string>
    <string name="edit_ringtone">Choose Ringtone:</string>
    <string name="save_button">Save</string>
    <string name="save_and_run_button">Save and Run</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="create_task_toolbar_label">Create task</string>
    <string name="edit_task_toolbar_label">Edit task</string>
    <string name="successfully_changed">Successfully changed!</string>
    <string name="fill_all_required_fields">Fill all required fields!</string>
    <string name="successfully_saved">Successfully saved!</string>
    <string name="successfully_deleted">Successfully deleted!</string>
    <string name="somenthing_went_wrong">Something went wrong, try again later.</string>
    <string name="select_pomodoro_time">SELECT POMODORO TIME</string>
    <string name="select_valid_time">Select a valid time between 25 minutes and 1 hour</string>
    <string name="feature_isnt_implemented">This feature still isn\'t implemented!</string>
    <string name="successfully_ten_tasks_added">Ten tasks have been successfully added</string>
    <string name="select_all">Select all</string>
    <string name="add_task_button">Add task</string>
    <string name="open_debug_options_button">Open debug options</string>
    <string name="add_ten_tasks_button">Add ten tasks</string>
    <string name="save_task">Save task</string>
    <string name="save_and_run_the_task">Save and run the task</string>
    <string name="delete_selected_tasks">Delete selected tasks</string>
    <string name="delete_confirmation_message">Are you sure you want to delete this task?</string>
    <string name="pomodoro_notification_channel_id">pomodoro_channel</string>
    <string name="label_pomodoro_timer">Pomodoro Timer</string>
    <string name="pomodoro_timer_reminder">Pomodoro Timer Reminder</string>
    <string name="pomodoro_notification_channel_name">Pomodoro</string>
    <string name="time_to_do_a_break">It\'s time to do a break!</string>
    <string name="can_not_select_task_with_timer_active">You can not select a task with timer active!</string>
    <string name="can_not_delete_task_with_active_timer">You can not delete a task with task timer active!</string>
    <string name="pomodoro_timer_durations">Pomodoro Timer Durations</string>
    <string name="minutes_unit_type">minutes *</string>
    <string name="pomodoro_time">Pomodoro time</string>
    <string name="short_break_time">Short break</string>
    <string name="long_break_time">Long break</string>
    <string name="pomodoro_timers_cycles">Quantity of Pomodoro Timers cycles</string>
    <string name="you_have_to_name_the_task">You have to name the task!</string>
    <plurals name="delete_selected_tasks">
        <item quantity="one">Are you sure you want to delete this task?</item>
        <item quantity="other">"Are you sure you want to delete %d tasks?"</item>
    </plurals>
</resources>